Fix various visual glitches, and put back some of the previous elements/styles. Tested on IE6, FF2, Opera9.
git-svn-id: https://svn.boostpro.com/clients/boostcon/site/code/trunk@1999 bbad15d5-7c10-0410-ba9e-f711d5c1d17a

--- a/media/final_drop.css
+++ b/media/final_drop.css
@@ -196,8 +196,7 @@ visibility:visible;
 .menu ul ul a.self
 {
    /* font-size: 90%; */
-   /* font-weight: bold; */
-   display: none;
+   font-weight: bold;
 }
 
 .menu ul ul *:focus { outline : none }
